trunk/Archive2/98/a1bbf84cc5033b/output
main.cpp:14:11: error: 'stat' was not declared in this scope
 std::list<stat>::iterator search_item(unsigned long int) {
           ^
main.cpp:14:15: error: template argument 1 is invalid
 std::list<stat>::iterator search_item(unsigned long int) {
               ^
main.cpp:14:15: error: template argument 2 is invalid
main.cpp:14:27: error: expected initializer before 'search_item'
 std::list<stat>::iterator search_item(unsigned long int) {
                           ^
